[gd_scene load_steps=63 format=3 uid="uid://dvskyskj2hvfe"]

[ext_resource type="Script" path="res://Character/CharacterMovement_Base.gd" id="1_78um4"]
[ext_resource type="PackedScene" uid="uid://ioyabl3m877b" path="res://Character/mixamo_character.tscn" id="2_t3nid"]
[ext_resource type="Script" path="res://Character/AnimationBlend.gd" id="3_qeyhr"]
[ext_resource type="Script" path="res://Player/Camera.gd" id="8_aq7c4"]
[ext_resource type="AudioStream" uid="uid://bpnobn6wg8hxp" path="res://Character/footstep_sound/footstep2.wav" id="8_gwq64"]
[ext_resource type="Script" path="res://Character/Interaction.gd" id="9_2ydqu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c35sx"]
resource_local_to_scene = true
radius = 0.375
height = 1.0

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_4f067"]
bone_name = "Spine2"
bone_index = 3
target_nodepath = NodePath("../../LookAtObject")
additional_rotation = Vector3(90, 180, 0)

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_urd5f"]
enabled = true
strength = 0.5
modification_count = 1
modifications/0 = SubResource( "SkeletonModification3DLookAt_4f067" )

[sub_resource type="SkeletonModification3DStackHolder" id="SkeletonModification3DStackHolder_etb8w"]
held_modification_stack = SubResource( "SkeletonModificationStack3D_urd5f" )

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_3xhhi"]
bone_name = "Head"
bone_index = 5
target_nodepath = NodePath("../../LookAtObject")
additional_rotation = Vector3(90, 180, 0)

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_uow2w"]
enabled = true
modification_count = 1
modifications/0 = SubResource( "SkeletonModification3DLookAt_3xhhi" )

[sub_resource type="SkeletonModification3DStackHolder" id="SkeletonModification3DStackHolder_ciyx1"]
held_modification_stack = SubResource( "SkeletonModificationStack3D_uow2w" )

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_g4cfm"]
resource_local_to_scene = true
modification_count = 2
modifications/0 = SubResource( "SkeletonModification3DStackHolder_etb8w" )
modifications/1 = SubResource( "SkeletonModification3DStackHolder_ciyx1" )

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_twcy5"]
animation = &"TurnLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a2hmg"]
animation = &"TurnRight"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_1l4w4"]
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vp77s"]
animation = &"Falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r0ju1"]
animation = &"FallingStart"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ideig"]
switch_mode = 1
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iqu7g"]
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gg4yn"]
states/Falling/node = SubResource( "AnimationNodeAnimation_vp77s" )
states/Falling/position = Vector2(864, 268)
states/FallingStart/node = SubResource( "AnimationNodeAnimation_r0ju1" )
states/FallingStart/position = Vector2(600, 268)
states/Start/position = Vector2(404, 268)
transitions = ["FallingStart", "Falling", SubResource( "AnimationNodeStateMachineTransition_ideig" ), "Start", "FallingStart", SubResource( "AnimationNodeStateMachineTransition_iqu7g" )]
graph_offset = Vector2(116, 80)

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_rgrah"]
sync = true

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_nh7d2"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Hips", "Armature/Skeleton3D:LeftFoot", "Armature/Skeleton3D:LeftLeg", "Armature/Skeleton3D:LeftToeBase", "Armature/Skeleton3D:LeftUpLeg", "Armature/Skeleton3D:RightFoot", "Armature/Skeleton3D:RightLeg", "Armature/Skeleton3D:RightToeBase", "Armature/Skeleton3D:RightUpLeg"]
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_154hg"]
animation = &"CrouchIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bv1y"]
animation = &"CrouchWalkingForward"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urt4k"]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6juuf"]
switch_mode = 1
advance_condition = &"walking"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_611fp"]
switch_mode = 1
advance_condition = &"idle"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_w0g24"]
states/CrouchIdle/node = SubResource( "AnimationNodeAnimation_154hg" )
states/CrouchIdle/position = Vector2(321, 100)
states/CrouchWalkingForward/node = SubResource( "AnimationNodeAnimation_0bv1y" )
states/CrouchWalkingForward/position = Vector2(560, 100)
states/Start/position = Vector2(157, 100)
transitions = ["Start", "CrouchIdle", SubResource( "AnimationNodeStateMachineTransition_urt4k" ), "CrouchIdle", "CrouchWalkingForward", SubResource( "AnimationNodeStateMachineTransition_6juuf" ), "CrouchWalkingForward", "CrouchIdle", SubResource( "AnimationNodeStateMachineTransition_611fp" )]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5ouea"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q0w1d"]
animation = &"Jogbackward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2fd4a"]
animation = &"JogForward"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_5puiv"]
input_count = 2
input_0/name = "Forward"
input_0/auto_advance = false
input_1/name = "Backward"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_fipxh"]
graph_offset = Vector2(-361, 104)
nodes/Animation/node = SubResource( "AnimationNodeAnimation_2fd4a" )
nodes/Animation/position = Vector2(-100, 100)
"nodes/Animation 2/node" = SubResource( "AnimationNodeAnimation_q0w1d" )
"nodes/Animation 2/position" = Vector2(-100, 220)
nodes/FB/node = SubResource( "AnimationNodeTransition_5puiv" )
nodes/FB/position = Vector2(140, 140)
node_connections = [&"output", 0, &"FB", &"FB", 0, &"Animation", &"FB", 1, &"Animation 2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j4dou"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o6ga8"]
animation = &"RunToStop"

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_mnurx"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_rd7gb"]
graph_offset = Vector2(-348.252, 95.8945)
nodes/StopAnim/node = SubResource( "AnimationNodeAnimation_o6ga8" )
nodes/StopAnim/position = Vector2(-260, 180)
nodes/StopSeek/node = SubResource( "AnimationNodeTimeSeek_mnurx" )
nodes/StopSeek/position = Vector2(-60, 160)
node_connections = [&"output", 0, &"StopSeek", &"StopSeek", 0, &"StopAnim"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fgiyf"]
animation = &"WalkingBackward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_msank"]
animation = &"Walk"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_s7sc4"]
input_count = 2
input_0/name = "Forward"
input_0/auto_advance = false
input_1/name = "Backward"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_8bvke"]
graph_offset = Vector2(-214, 40)
nodes/Animation/node = SubResource( "AnimationNodeAnimation_msank" )
nodes/Animation/position = Vector2(-60, 60)
"nodes/Animation 2/node" = SubResource( "AnimationNodeAnimation_fgiyf" )
"nodes/Animation 2/position" = Vector2(-100, 180)
nodes/FB/node = SubResource( "AnimationNodeTransition_s7sc4" )
nodes/FB/position = Vector2(140, 100)
node_connections = [&"output", 0, &"FB", &"FB", 0, &"Animation", &"FB", 1, &"Animation 2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wnbtw"]
switch_mode = 2
advance_condition = &"idle"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rvsaa"]
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s0egl"]
switch_mode = 1
advance_condition = &"sprinting"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xf5i1"]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nbs2g"]
switch_mode = 1
advance_condition = &"walking"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rs3n0"]
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6gab4"]
switch_mode = 1
advance_condition = &"running"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6m5a2"]
switch_mode = 1
advance_condition = &"walking"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hy2h2"]
switch_mode = 1
advance_condition = &"running"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2tyel"]
switch_mode = 1
advance_condition = &"sprinting"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7h1qf"]
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4twgu"]
switch_mode = 1
advance_condition = &"running"
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5xtv7"]
states/Idle/node = SubResource( "AnimationNodeAnimation_5ouea" )
states/Idle/position = Vector2(137, 278)
states/Jog/node = SubResource( "AnimationNodeBlendTree_fipxh" )
states/Jog/position = Vector2(687.227, 134)
states/Run/node = SubResource( "AnimationNodeAnimation_j4dou" )
states/Run/position = Vector2(881, 296)
states/Start/position = Vector2(22, 278)
states/Stopping/node = SubResource( "AnimationNodeBlendTree_rd7gb" )
states/Stopping/position = Vector2(505, 327)
states/Walk/node = SubResource( "AnimationNodeBlendTree_8bvke" )
states/Walk/position = Vector2(216.227, 134)
transitions = ["Stopping", "Idle", SubResource( "AnimationNodeStateMachineTransition_wnbtw" ), "Run", "Stopping", SubResource( "AnimationNodeStateMachineTransition_rvsaa" ), "Idle", "Run", SubResource( "AnimationNodeStateMachineTransition_s0egl" ), "Start", "Idle", SubResource( "AnimationNodeStateMachineTransition_xf5i1" ), "Idle", "Walk", SubResource( "AnimationNodeStateMachineTransition_nbs2g" ), "Walk", "Stopping", SubResource( "AnimationNodeStateMachineTransition_rs3n0" ), "Walk", "Jog", SubResource( "AnimationNodeStateMachineTransition_6gab4" ), "Jog", "Walk", SubResource( "AnimationNodeStateMachineTransition_6m5a2" ), "Run", "Jog", SubResource( "AnimationNodeStateMachineTransition_hy2h2" ), "Jog", "Run", SubResource( "AnimationNodeStateMachineTransition_2tyel" ), "Jog", "Stopping", SubResource( "AnimationNodeStateMachineTransition_7h1qf" ), "Idle", "Jog", SubResource( "AnimationNodeStateMachineTransition_4twgu" )]
graph_offset = Vector2(-3.773, 84)

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_ap4r3"]
input_count = 2
xfade_time = 0.3
input_0/name = "stand"
input_0/auto_advance = false
input_1/name = "crouch"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_512i8"]
graph_offset = Vector2(-362.436, 263.587)
nodes/StateMachine/node = SubResource( "AnimationNodeStateMachine_5xtv7" )
nodes/StateMachine/position = Vector2(-120, 40)
"nodes/StateMachine 2/node" = SubResource( "AnimationNodeStateMachine_w0g24" )
"nodes/StateMachine 2/position" = Vector2(-120, 300)
nodes/crouch/node = SubResource( "AnimationNodeTransition_ap4r3" )
nodes/crouch/position = Vector2(100, 180)
node_connections = [&"output", 0, &"crouch", &"crouch", 0, &"StateMachine", &"crouch", 1, &"StateMachine 2"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_nh6tc"]
graph_offset = Vector2(402, 1365)
nodes/AnimTurnLeft/node = SubResource( "AnimationNodeAnimation_twcy5" )
nodes/AnimTurnLeft/position = Vector2(500, 1540)
nodes/AnimTurnRight/node = SubResource( "AnimationNodeAnimation_a2hmg" )
nodes/AnimTurnRight/position = Vector2(500, 1660)
nodes/InAir/node = SubResource( "AnimationNodeBlend2_1l4w4" )
nodes/InAir/position = Vector2(1280, 1380)
nodes/InAirState/node = SubResource( "AnimationNodeStateMachine_gg4yn" )
nodes/InAirState/position = Vector2(1020, 1680)
nodes/RightOrLeft/node = SubResource( "AnimationNodeBlend2_rgrah" )
nodes/RightOrLeft/position = Vector2(720, 1560)
nodes/Turn/node = SubResource( "AnimationNodeBlend2_nh7d2" )
nodes/Turn/position = Vector2(980, 1400)
nodes/VelocityDirection/node = SubResource( "AnimationNodeBlendTree_512i8" )
nodes/VelocityDirection/position = Vector2(680, 1400)
nodes/output/position = Vector2(1540, 1400)
node_connections = [&"output", 0, &"InAir", &"InAir", 0, &"Turn", &"InAir", 1, &"InAirState", &"RightOrLeft", 0, &"AnimTurnLeft", &"RightOrLeft", 1, &"AnimTurnRight", &"Turn", 0, &"VelocityDirection", &"Turn", 1, &"RightOrLeft"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_6l7i2"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_mhokj"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_w05dv"]

[node name="Character" type="CharacterBody3D"]
top_level = true
script = ExtResource( "1_78um4" )
mesh_path = NodePath("Character")
skeleton_path = NodePath("Character/Armature/Skeleton3D")
tilt_power = 0.0
rotation_mode = 0
gait = 0
stance = 0
overlay_state = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource( "CapsuleShape3D_c35sx" )

[node name="HeadBonker" type="RayCast3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0.1, 0)

[node name="Character" parent="." instance=ExtResource( "2_t3nid" )]

[node name="Skeleton3D" parent="Character/Armature" index="0"]
bones/0/position = Vector3(-0.00178295, 0.93147, -0.000829465)
bones/0/rotation = Quaternion(-0.0404878, -0.367576, -0.0133684, 0.929016)
bones/1/rotation = Quaternion(-0.013795, 0.0404594, -0.00570576, 0.99907)
bones/2/rotation = Quaternion(0.0938677, 0.0821606, -0.00781144, 0.992158)
bones/3/rotation = Quaternion(0.153562, 0.081535, -0.012774, 0.984687)
bones/4/rotation = Quaternion(0.13, -0.0100323, 0.00323177, 0.991458)
bones/5/rotation = Quaternion(-0.0476465, 0.169504, -0.057324, 0.982707)
bones/9/rotation = Quaternion(-0.473886, -0.535289, 0.569755, -0.405312)
bones/10/rotation = Quaternion(0.535681, -0.0750068, 0.146269, 0.828267)
bones/11/rotation = Quaternion(-0.00862825, 0.0978816, 0.452469, 0.88635)
bones/12/rotation = Quaternion(-0.152263, 0.123603, -0.00610517, 0.980562)
bones/13/rotation = Quaternion(0.138802, 0.00285005, -0.0697464, 0.987857)
bones/14/rotation = Quaternion(0.201641, -0.00139877, 0.0156619, 0.979333)
bones/15/rotation = Quaternion(-3.67559e-08, -1.41095e-07, 7.98258e-06, 1)
bones/17/rotation = Quaternion(0.285945, 0.116969, 0.178597, 0.934161)
bones/18/rotation = Quaternion(-0.00695294, 0.000807787, -0.000645551, 0.999975)
bones/19/rotation = Quaternion(-6.00226e-07, -5.24477e-06, -9.80928e-06, 1)
bones/21/rotation = Quaternion(0.0416421, -0.00556449, 0.0615129, 0.997222)
bones/22/rotation = Quaternion(0.151646, -0.000942251, -0.00577783, 0.988418)
bones/23/rotation = Quaternion(1.93157e-06, -1.96928e-06, -1.73993e-07, 1)
bones/25/rotation = Quaternion(0.277818, -0.0191281, -0.11486, 0.953551)
bones/26/rotation = Quaternion(0.287088, 0.00176345, 0.0250643, 0.957575)
bones/27/rotation = Quaternion(2.20086e-08, -1.04308e-07, 3.06936e-06, 1)
bones/29/rotation = Quaternion(0.302931, -0.0207072, -0.148604, 0.941128)
bones/30/rotation = Quaternion(0.347132, 0.0117191, 0.0500114, 0.936408)
bones/31/rotation = Quaternion(1.96885e-06, -2.02656e-06, 9.92699e-06, 1)
bones/33/rotation = Quaternion(0.52724, -0.494269, 0.539192, 0.432422)
bones/34/rotation = Quaternion(0.516261, 0.0816001, 0.0796795, 0.848803)
bones/35/rotation = Quaternion(0.0640186, -0.0613625, -0.43107, 0.89795)
bones/36/rotation = Quaternion(0.107037, -0.00384097, -0.0382506, 0.993512)
bones/37/rotation = Quaternion(0.110468, 0.00832762, 0.0255479, 0.993516)
bones/38/rotation = Quaternion(0.30808, 0.00172774, -0.0211549, 0.951124)
bones/39/rotation = Quaternion(2.48575e-09, 3.59723e-08, -7.55145e-06, 1)
bones/41/rotation = Quaternion(0.204285, 0.023532, -0.229941, 0.951231)
bones/42/rotation = Quaternion(0.0040414, 0.00201042, 0.181033, 0.983467)
bones/43/rotation = Quaternion(1.69361e-06, 4.44764e-06, 1.01658e-05, 1)
bones/45/rotation = Quaternion(0.0391763, 0.00999753, 0.00913289, 0.999141)
bones/46/rotation = Quaternion(0.146862, 0.00016999, 0.00970911, 0.989109)
bones/47/rotation = Quaternion(-1.84937e-07, -1.9063e-07, 2.68407e-07, 1)
bones/49/rotation = Quaternion(0.210005, -0.00653954, 0.0653411, 0.975493)
bones/50/rotation = Quaternion(0.342349, -0.00250947, -0.036055, 0.938877)
bones/51/rotation = Quaternion(-3.50492e-06, -3.27639e-06, -3.23559e-06, 1)
bones/53/rotation = Quaternion(0.208356, -0.0111496, 0.0917902, 0.973672)
bones/54/rotation = Quaternion(0.380882, -0.0136234, -0.0710902, 0.921786)
bones/55/rotation = Quaternion(-4.67627e-09, 2.32831e-09, -1.09152e-05, 1)
bones/57/rotation = Quaternion(-0.124865, 0.00660868, 0.9836, 0.129986)
bones/58/rotation = Quaternion(-0.287271, 0.0749427, -0.0186656, 0.954731)
bones/59/rotation = Quaternion(0.594059, 0.0613583, 0.113745, 0.793972)
bones/60/rotation = Quaternion(0.354175, 0.0202164, 0.00409467, 0.934952)
bones/62/rotation = Quaternion(0.0799562, 0.205373, 0.969837, -0.104141)
bones/63/rotation = Quaternion(-0.305077, 0.122269, -0.0385238, 0.94366)
bones/64/rotation = Quaternion(0.489026, -0.0220146, -0.0397308, 0.871086)
bones/65/rotation = Quaternion(0.360051, -0.00342669, -0.0295718, 0.932457)
modification_stack = SubResource( "SkeletonModificationStack3D_g4cfm" )

[node name="LookAtObject" parent="Character" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.436956, 0.178501, 0.633089)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( "AnimationNodeBlendTree_nh6tc" )
anim_player = NodePath("../Character/AnimationPlayer")
active = true
parameters/InAir/blend_amount = 0.0
parameters/InAirState/playback = SubResource( "AnimationNodeStateMachinePlayback_6l7i2" )
parameters/RightOrLeft/blend_amount = 0.0
parameters/Turn/blend_amount = 0.0
parameters/VelocityDirection/StateMachine/playback = SubResource( "AnimationNodeStateMachinePlayback_mhokj" )
parameters/VelocityDirection/StateMachine/conditions/idle = true
parameters/VelocityDirection/StateMachine/conditions/running = false
parameters/VelocityDirection/StateMachine/conditions/sprinting = false
parameters/VelocityDirection/StateMachine/conditions/stop = false
parameters/VelocityDirection/StateMachine/conditions/walking = false
parameters/VelocityDirection/StateMachine/Jog/FB/current = 0
parameters/VelocityDirection/StateMachine/Stopping/StopSeek/seek_position = -1.0
parameters/VelocityDirection/StateMachine/Walk/FB/current = 0
"parameters/VelocityDirection/StateMachine 2/playback" = SubResource( "AnimationNodeStateMachinePlayback_w05dv" )
"parameters/VelocityDirection/StateMachine 2/conditions/idle" = false
"parameters/VelocityDirection/StateMachine 2/conditions/walking" = false
parameters/VelocityDirection/crouch/current = 0
script = ExtResource( "3_qeyhr" )

[node name="CameraRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.03796e-08, 0)
script = ExtResource( "8_aq7c4" )
view_angle = 2
view_mode = 0

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60938, 0)
spring_length = 1.75
margin = 0.2

[node name="Camera" type="Camera3D" parent="CameraRoot/SpringArm3D"]
transform = Transform3D(1, 0, 7.01424e-15, 0, 1, 0, -7.01424e-15, 0, 1, 0, 0, 0)
fov = 90.0

[node name="InteractionRaycast" type="RayCast3D" parent="CameraRoot/SpringArm3D/Camera"]
visible = false
target_position = Vector3(0, 0, -6)
collision_mask = 2
script = ExtResource( "9_2ydqu" )

[node name="roll_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="FootstepSounds" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( "8_gwq64" )
unit_db = -51.4991
unit_size = 1.0

[editable path="Character"]
